--- a/Project CoD/style.css
+++ b/Project CoD/style.css
@@ -1,14 +1,32 @@
-.wrapper { height: 1000px; background-color: darkgreen;}
+body {background-color: black;}
 
-.icon {color: rgb(0, 0, 0);}
+.wrapper { height: 1000px; background-color: rgb(255, 254, 254);}
 
-.nav {background-color: darkgreen;}
+
+
+ .icon {color: rgb(0, 0, 0);}
+
+.nav {color: darkgreen;}
 
 f {color: #969696;}
 
-.dropdown-menu {background-color: darkgreen;}
+.dropdown-menu {color: darkgreen;}
 
-.dropdown-item {background-color: darkgreen;}
+.dropdown-item {background-color: darkgreen;} 
+
+.wrap {border: solid black; height: 800px;  background-image: url(/wb9/Project\ CoD/cd.png); background-size: 100%;}
+
+.nav1 {background-color: black; border: solid black; height: 350px; width: 500px; margin: 50px 500px 0px 50px; }
+
+img {width: 500px; height: 150px;}
+
+.text {color: aliceblue;}
+
+.sect {border: solid black; height: 500px; display: flex; justify-content: ;}
+
+.img1 {border: solid black;width: 1100px; height: 450px; background-image: url(/wb9/Project\ CoD/turnir.png); background-size: 100% 400px;}
+
+.img2 {border: solid black;width: 300px; height: 300px; }
 
 
 
