--- a/l/style.css
+++ b/l/style.css
@@ -1,4 +1,9 @@
 body {background-color: #ffffff;}
+
+#wrapper { }
+
+
+
 #icon {width:60px; height: 60px; border: 1px solid black;}
 #iconImg {width: 60px; height: 60px;} 
 #topnav {
@@ -261,7 +266,83 @@ font-size: x-large;
 
 
 #topfoot {
-height: 135px;
+height: 125px;
 background-color: #fca902;
+display:flex ;
+justify-content:  center;
 }
-
+#foot-txt1 {
+    border: 1px solid black;
+    
+    height: 70px;
+    width: 1350px;
+    font-size:0.75em ;
+    margin-top: 55px;
+  
+}
+#foot-btns {
+    /* border: 1px solid black;
+    background-color: #e33939; */
+    height: 50px;
+    width: 100%;
+    width: 1;
+    display: flex;
+    font-size:0.75em ;
+    
+}
+#foot-btn1 {
+    /* border: 1px solid black;
+    background-color: #00ccfa; */
+    height: 20px;
+    width: 170px;
+    font-size:11px ;
+    color: #0645ad;
+}
+#foot-btn2 {
+    /* border: 1px solid black;
+    background-color: #00ccfa; */
+    height: 20px;
+    width: 120px;
+    font-size:11px ;
+    color: #0645ad;
+}
+#foot-btn3 {
+    /* border: 1px solid black;
+    background-color: #00ccfa; */
+    height: 20px;
+    width: 140px;
+    font-size:11px ;
+    color: #0645ad;
+}
+#foot-btn4 {
+    /* border: 1px solid black;
+    background-color: #00ccfa; */
+    height: 20px;
+    width: 100px;
+    font-size:11px ;
+    color: #0645ad;
+}
+#foot-btn5 {
+    /* border: 1px solid black;
+    background-color: #00ccfa; */
+    height: 20px;
+    width: 87px;
+    font-size:11px ;
+    color: #0645ad;
+}
+#foot-btn6 {
+    /* border: 1px solid black;
+    background-color: #00ccfa; */
+    height: 20px;
+    width: 70px;
+    font-size:11px ;
+    color: #0645ad;
+}
+#foot-btn7 {
+    /* border: 1px solid black;
+    background-color: #00ccfa; */
+    height: 20px;
+    width: 150px;
+    font-size:11px ;
+    color: #0645ad;
+}
